[gd_scene load_steps=9 format=3 uid="uid://gnoahc8kqwnc"]

[ext_resource type="Script" uid="uid://cbwxokk8ndm85" path="res://turret_flame.gd" id="1_0c68v"]
[ext_resource type="PackedScene" uid="uid://74k1c1nsv2ww" path="res://FlameVFX.tscn" id="2_2fs8p"]
[ext_resource type="PackedScene" uid="uid://dlhby46imux54" path="res://Assets/Cannon.glb" id="3_f32ud"]
[ext_resource type="PackedScene" uid="uid://drk1ib01248mo" path="res://Assets/GLB format/tower-round-build-f.glb" id="4_x56a2"]
[ext_resource type="AudioStream" uid="uid://cl7bjhu6vfcnn" path="res://Assets/audio/dragon-breathes-fire-3-191459.mp3" id="5_2fs8p"]

[sub_resource type="Animation" id="Animation_83qd5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TurretBase/TurretTop:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.3, 0)]
}

[sub_resource type="Animation" id="Animation_jlbdq"]
resource_name = "fire"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TurretBase/TurretTop:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.3, -0.6), Vector3(0, 0.3, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4yfqt"]
_data = {
&"RESET": SubResource("Animation_83qd5"),
&"fire": SubResource("Animation_jlbdq")
}

[node name="turret_flame" type="Node3D"]
script = ExtResource("1_0c68v")
flame_duration = 6.0
flame_vfx_scene = ExtResource("2_2fs8p")

[node name="TurretBase" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="TurretTop" type="Node3D" parent="TurretBase"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)

[node name="Cannon" parent="TurretBase/TurretTop" instance=ExtResource("3_f32ud")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.825281, 0)

[node name="Cannon_Weap_001" parent="TurretBase/TurretTop/Cannon" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.97837377)
transparency = 1.0
cast_shadow = 0

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="FlameTower" parent="." instance=ExtResource("4_x56a2")]
transform = Transform3D(2.5, 0, 0, 0, 2.5, 0, 0, 0, 2.5, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_4yfqt")
}

[node name="ShootSnd" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_2fs8p")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]

[editable path="TurretBase/TurretTop/Cannon"]
